--- a/L0Q1.in
+++ b/L0Q1.in
@@ -1,2 +1,3 @@
-p o i n t s (−2 ,−1) ( 4 , 2 ) ( 4 , 0 ) ( 2 , 2 ) ( 8 , 6 )
-p o i n t s ( 4 1 , 0 ) ( 1 3 , 0 ) ( −23 ,−14) ( 1 3 , 4 4 ) ( 4 6 , 1 9 ) (−22 ,−7) ( −7 ,41) ( −13 ,35)
+points (-2 ,-1) ( 4 , 2 ) ( 4 , 0 ) ( 2 , 2 ) ( 8 , 6 )
+points ( 41 , 0 ) ( 13 , 0 ) ( -23 ,-14) ( 13 , 44 ) ( 46 , 19 ) (-22 ,-7) ( -7 ,41) ( -13 ,35)
+
